--- a/ci/base/pipeline.yml
+++ b/ci/base/pipeline.yml
@@ -14,6 +14,7 @@
 #! limitations under the License.
 
 #@ load("templates.lib.yml",
+#@      "resource_type",
 #@      "gcr_image_resource",
 #@      "project_gcr_image_resource",
 #@      "git_resource",
@@ -37,14 +38,8 @@
 
 ---
 resource_types:
-  - name: gci
-    type: docker-image
-    source:
-      repository: smgoller/gci-resource
-  - name: gcs-resource
-    type: docker-image
-    source:
-      repository: frodenas/gcs-resource
+  - #@ resource_type("gci-resource", "smgoller/gci-resource")
+  - #@ resource_type("gcs-resource", "frodenas/gcs-resource")
 
 resources:
   - #@ semver_resource("version", "1.14.0-build.0")
