--- a/ci/base/pipeline.yml
+++ b/ci/base/pipeline.yml
@@ -23,16 +23,9 @@
 #@      "build_resources",
 #@      "build_jobs",
 #@      "build_job_name",
-#@      "packer_job_name",
-#@      "docker_job",
-#@      "docker_job_name",
 #@      "update_pipeline_job",
-#@      "update_pipeline_job_name",
-#@      "version_source_job",
-#@      "version_source_job_name")
+#@      "update_pipeline_job_name")
 #@ load("@ytt:data", "data")
-#@ load("@ytt:overlay", "overlay")
-#@ load("@ytt:struct", "struct")
 #@ load("@ytt:template", "template")
 
 ---
