--- a/ci/release/pipeline.yml
+++ b/ci/release/pipeline.yml
@@ -23,6 +23,7 @@
 #@      "docker_job",
 #@      "docker_job_name",
 #@      "package_resource",
+#@      "package_resource_name",
 #@      "put_package",
 #@      "version_source_job",
 #@      "version_source_job_name")
@@ -74,8 +75,41 @@ jobs:
       - #@ put_package(build, config)
         #@ end
         #@ end
+      #@overlay/append
+  - name: github-release
+    plan:
+      - in_parallel:
+          fail_fast: true
+          steps:
+            - get: version
+              passed:
+                #@ for build in data.values.builds:
+                #@ for config in data.values.configs:
+                - #@ build_job_name(build, config)
+                  #@ end
+                #@ end
+              trigger: true
+            - get: source
+              passed:
+                #@ for build in data.values.builds:
+                #@ for config in data.values.configs:
+                - #@ build_job_name(build, config)
+                  #@ end
+                #@ end
+              trigger: true
+            #@ for build in data.values.builds:
+            #@ for config in data.values.configs:
+            #@ for package in build.packages:
+            - get: #@ package_resource_name(build, config, package)
+              passed:
+                - #@ build_job_name(build, config)
+              trigger: true
+              #@ end
+              #@ end
+              #@ end
 
-      #@overlay/match-child-defaults missing_ok=True
+
+              #@overlay/match-child-defaults missing_ok=True
 groups:
   #@overlay/match by="name"
   - name: images
@@ -94,3 +128,5 @@ groups:
       - #@ docker_job_name("task-image")
       #@overlay/append
       - #@ version_source_job_name()
+      #@overlay/append
+      - github-release
