--- a/ci/pr/pipeline.yml
+++ b/ci/pr/pipeline.yml
@@ -58,18 +58,17 @@ jobs:
   #@ for build in data.values.builds:
   #@ for config in data.values.configs:
   #@ name = build_job_name(build, config)
-  #@overlay/match by="name", missing_ok=True
+  #@overlay/match by="name"
   - name: #@ name
     plan:
       #@overlay/match by=overlay.index(0)
       - in_parallel:
-          fail_fast: true
           steps:
-            #@overlay/match by=overlay.subset({"get": "source"})
-            - version: every
+            - #@overlay/match by=overlay.subset({"get": "source"})
+              version: every
               on_success: #@ pr_status(name, "pending")
-            #@overlay/match by=overlay.subset({"get": "version"})
-            - trigger: false
+            - #@overlay/match by=overlay.subset({"get": "version"})
+              trigger: false
     on_error:
       in_parallel:
         steps:
@@ -91,5 +90,5 @@ jobs:
           #@overlay/append
           - #@ pr_status(name, "success")
 
-            #@ end
-          #@ end
+  #@ end
+  #@ end
