--- a/ci/release/pipeline.yml
+++ b/ci/release/pipeline.yml
@@ -37,45 +37,45 @@ resources:
   - #@ registry_image_resource("packer-image", "hashicorp/packer")
   #@overlay/append
   - #@ git_resource("packer-source", data.values.repository.url, data.values.repository.branch, ["packer/*"])
-    #@ for build in data.values.builds:
+
+  #@ for build in data.values.builds:
   #@overlay/append
   - #@ gci_resource(build.source_image_family)
-    #@ for config in data.values.configs:
-    #@ for package in build.packages:
+  #@ for config in data.values.configs:
+  #@ for package in build.packages:
   #@overlay/append
   - #@ package_resource(build, config , package)
-    #@ end
-    #@ end
-    #@ end
+  #@ end
+  #@ end
+  #@ end
 
+#@overlay/match-child-defaults missing_ok=True
 jobs:
   #@overlay/append
   - #@ version_source_job()
   #@overlay/append
   - #@ docker_job("task-image", "ci-source", "ci/docker/task")
-    #@ for build in data.values.builds:
+
+  #@ for build in data.values.builds:
   #@overlay/append
   - #@ packer_job(build)
-    #@ for config in data.values.configs:
-  #@overlay/match by="name", missing_ok=True
+  #@ for config in data.values.configs:
+  #@overlay/match by="name"
   - name: #@ build_job_name(build, config)
     plan:
       #@overlay/match by=overlay.index(0)
       - in_parallel:
           steps:
-            #@overlay/match by=overlay.subset({"get": "version"})
-            - get: version
-              #@overlay/match missing_ok=True
+            - #@overlay/match by=overlay.subset({"get": "version"})
               passed: [ version-source ]
-            #@overlay/match by=overlay.subset({"get": "source"})
-            - get: source
-              #@overlay/match missing_ok=True
+            - #@overlay/match by=overlay.subset({"get": "source"})
               passed: [ version-source ]
       #@overlay/append
       - #@ put_package(build, config)
-        #@ end
-        #@ end
-      #@overlay/append
+  #@ end
+  #@ end
+
+  #@overlay/append
   - name: github-release
     plan:
       - in_parallel:
@@ -86,7 +86,7 @@ jobs:
                 #@ for build in data.values.builds:
                 #@ for config in data.values.configs:
                 - #@ build_job_name(build, config)
-                  #@ end
+                #@ end
                 #@ end
               trigger: true
             - get: source
@@ -94,7 +94,7 @@ jobs:
                 #@ for build in data.values.builds:
                 #@ for config in data.values.configs:
                 - #@ build_job_name(build, config)
-                  #@ end
+                #@ end
                 #@ end
               trigger: true
             #@ for build in data.values.builds:
@@ -104,12 +104,12 @@ jobs:
               passed:
                 - #@ build_job_name(build, config)
               trigger: true
-              #@ end
-              #@ end
-              #@ end
+            #@ end
+            #@ end
+            #@ end
 
 
-              #@overlay/match-child-defaults missing_ok=True
+#@overlay/match-child-defaults missing_ok=True
 groups:
   #@overlay/match by="name"
   - name: images
@@ -123,7 +123,7 @@ groups:
       #@ for build in data.values.builds:
       #@overlay/append
       - #@ packer_job_name(build)
-        #@ end
+      #@ end
       #@overlay/append
       - #@ docker_job_name("task-image")
       #@overlay/append
