--- a/ci/base/base.yml
+++ b/ci/base/base.yml
@@ -56,7 +56,7 @@ builds:
     with_dot_net: #@ True
     #@yaml/map-key-override
     params:
-      CMAKE_CONFIGURE_FLAGS: "-A x64 -Thost=x64"
+      CMAKE_CONFIGURE_FLAGS: "-A x64 -Tv141,version=14.15,host=x64 -DCMAKE_SYSTEM_VERSION=10.0.16299.0"
       CMAKE_BUILD_FLAGS: "/m"
       CPACK_GENERATORS: "ZIP"
 
