Debug build script

--- a/ci/lib/templates.lib.yml
+++ b/ci/lib/templates.lib.yml
@@ -215,7 +215,7 @@ config:
       - -c
       #@yaml/text-templated-strings
       - |
-        set -ueo pipefail
+        set -xueo pipefail
 
         (@= remote_functions() @)
 
