Update to boost 1.75.0 and fix MSVC

--- a/dependencies/boost/CMakeLists.txt
+++ b/dependencies/boost/CMakeLists.txt
@@ -57,9 +57,10 @@ endif()
 if ("SunOS" STREQUAL ${CMAKE_SYSTEM_NAME})
   list(APPEND BOOTSTRAP_FLAGS --with-toolset=sun)
   list(APPEND B2_FLAGS define=BOOST_OPTIONAL_DETAIL_NO_RVALUE_REFERENCES)
-elseif ("Windows" STREQUAL ${CMAKE_SYSTEM_NAME})
+elseif(MSVC)
+  list(APPEND BOOTSTRAP_FLAGS vc${MSVC_TOOLSET_VERSION})
+  list(APPEND B2_FLAGS toolset=msvc-${MSVC_TOOLSET_VERSION})
   set(CMAKE_STATIC_LIBRARY_PREFIX lib)
-  list(APPEND B2_FLAGS toolset=msvc-14.1)
 elseif ("Clang" STREQUAL ${CMAKE_CXX_COMPILER_ID})
   list(APPEND BOOTSTRAP_FLAGS --with-toolset=clang)
 endif()
