Fixes boost on windows

--- a/dependencies/boost/CMakeLists.txt
+++ b/dependencies/boost/CMakeLists.txt
@@ -58,7 +58,11 @@ if ("SunOS" STREQUAL ${CMAKE_SYSTEM_NAME})
   list(APPEND B2_FLAGS define=BOOST_OPTIONAL_DETAIL_NO_RVALUE_REFERENCES)
 elseif(MSVC)
   list(APPEND BOOTSTRAP_FLAGS vc${MSVC_TOOLSET_VERSION})
-  list(APPEND B2_FLAGS toolset=msvc-${CMAKE_VS_PLATFORM_TOOLSET_VERSION})
+  if (CMAKE_VS_PLATFORM_TOOLSET_VERSION)
+	list(APPEND B2_FLAGS toolset=msvc-${CMAKE_VS_PLATFORM_TOOLSET_VERSION})
+  else()
+    list(APPEND B2_FLAGS toolset=msvc-${MSVC_TOOLSET_VERSION})
+  endif()
   set(CMAKE_STATIC_LIBRARY_PREFIX lib)
 elseif ("Clang" STREQUAL ${CMAKE_CXX_COMPILER_ID})
   list(APPEND BOOTSTRAP_FLAGS --with-toolset=clang)
