Use tar to speed up file copies.

--- a/ci/lib/templates.lib.yml
+++ b/ci/lib/templates.lib.yml
@@ -328,7 +328,7 @@ config:
         set -ueo pipefail
         (@= remote_functions() @)
 
-        remote_download build .
+        remote_download_directory build .
 #@ end
 
 ---
